services/code-for-boston/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wekan-mongo
  namespace: code-for-boston
spec:
  selector:
    app: wekan-mongo
  ports:
    - port: 27017
      targetPort: 27017
